# stroke-cv-cpp

./: CMakeLists.txt  CMakePresets.json  README.md
cpp_lib/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cpp_lib/include/: camera_engine.h  egl_utils.h  face_mesh_triangles.h  image_reader_handler.h  jni_native.h  lib.h  mediapipe_face_mesh.h  ndk_camera.h  utils.h
cpp_lib/src/: camera_engine.cpp  egl_utils.cpp  egl_utlils.cpp  image_reader_handler.cpp  jni_native.cpp  lib.cpp  mediapipe_face_mesh.cpp  ndk_camera.cpp  utils.cpp
flutter_ui/: README.md  jnigen.yaml  pubspec.yaml
flutter_ui/android/app/: build.gradle.kts  proguard-rules.pro
flutter_ui/android/app/src/main/: AndroidManifest.xml
flutter_ui/android/app/src/main/kotlin/com/example/camera_mvp/: MainActivity.kt  TexturePlugin.kt
flutter_ui/ios/Runner/: Info.plist
flutter_ui/ios/Runner.xcodeproj/: project.pbxproj
flutter_ui/lib/: camera_bindings.dart  global.dart  main.dart
flutter_ui/linux/: CMakeLists.txt
flutter_ui/linux/runner/: my_application.cc
flutter_ui/macos/Runner.xcodeproj/: project.pbxproj
flutter_ui/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
flutter_ui/macos/Runner/Configs/: AppInfo.xcconfig
flutter_ui/src/: camera.cpp
flutter_ui/web/: index.html  manifest.json
flutter_ui/windows/: CMakeLists.txt
flutter_ui/windows/runner/: Runner.rc  main.cpp
include/: lib.h
patches/: mediapipe.patch
working_ui/: README.md  pubspec.yaml
working_ui/android/app/: build.gradle.kts
working_ui/android/app/src/main/: AndroidManifest.xml
working_ui/android/app/src/main/kotlin/com/example/stroke_action_awareness/: MainActivity.kt
working_ui/ios/Runner/: Info.plist
working_ui/ios/Runner.xcodeproj/: project.pbxproj
working_ui/lib/: cpp_ffi.dart  home.dart  main.dart  menu.dart
working_ui/linux/: CMakeLists.txt
working_ui/linux/runner/: my_application.cc
working_ui/macos/Runner.xcodeproj/: project.pbxproj
working_ui/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
working_ui/macos/Runner/Configs/: AppInfo.xcconfig
working_ui/web/: index.html  manifest.json
working_ui/windows/: CMakeLists.txt
working_ui/windows/runner/: Runner.rc  main.cpp
